--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
       body {
         background-color: rgb(144, 73, 185);
         color: white;
+        background-image: url("stars.jpeg");
+        background-postion: center;
+        background-repeat: no-repeat;
+        background-size: cover;
       }
       
       
