add google font

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <style>
       body {
         background-color: rgb(144, 73, 185);
@@ -9,6 +12,7 @@
         background-postion: center;
         background-repeat: no-repeat;
         background-size: cover;
+        font-family: "Host Grotesk", sans-serif;
       }
       
       #darkness {
