--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
+    <title>plutos world</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -9,7 +10,7 @@
         background-color: rgb(144, 73, 185);
         color: white;
         background-image: url("stars.jpeg");
-        background-postion: center;
+        background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         font-family: "Host Grotesk", sans-serif;
