background image fill

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         background-image: url("stars.jpeg");
         background-position: center;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: fill;
         font-family: "Host Grotesk", sans-serif;
       }
       
